# lab4

./: CMakeLists.txt
include/: array.h  figure.h  rectangle.h  square.h  triangle.h
src/: array.cpp  main.cpp
test/: tests.cpp
